adicionado scribe para documentacao. iniciando area de produtos
