# app/Http/Controllers/UserController.php
@@ -21,9 +21,24 @@ class UserController extends Controller
     }
 
     /**
-     * Create
-     * 
-     * @return \App\Models\User|Json
+     * Criar usuário
+     *
+     * Cria um usuário.
+     *
+     * @group Usuarios
+     * @bodyParam api_token string required Token do usuário Example: b71175dd5644180d4bce21d1790bb0cf-eccbc87e4b5ce2fe28308fd9f2a7baf3
+     * @bodyParam name string required Nome do usuário
+     * @bodyParam cpf string required Cpf com ou sem formatação EX: 111.111.111-11 | 11111111111
+     * @bodyParam email string required Email do usuário EX: teste@estoqueintegrado.com
+     * @bodyParam password string Senha do usuário
+     * @bodyParam celular string Celular do usuário
+     *
+     * @response scenario=success {
+     *      "id":1,
+     *      "name": "Nome usuario",
+     *      "email": "teste@estoqueintegrado.com"
+     *      [...]
+     * }
      */
     public function create(Request $request)
     {
@@ -42,7 +57,7 @@ class UserController extends Controller
             if (!$user) return response(["message" => "Usuário não encontrado"], 404);
 
             if ($user->tipo_usuario_id != 1) { // admin
-                return response('Acesso negado!', 403);
+                return response(['message' => 'Acesso negado!'], 403);
             }
         }
 
@@ -62,9 +77,23 @@ class UserController extends Controller
 
 
     /**
-     * Update
-     * 
-     * @return \App\Models\User|Json
+     * Atualizar usuario
+     *
+     * Atualiza os dados de um usuário
+     *
+     * @bodyParam id integer required ID do usuário
+     * @group Usuarios
+     * @authenticated
+     *
+     * @response scenario=success {
+     *      "id": 1,
+     *      "name": "Ronierison Sena"
+     *      "email": "teste@teste.com"
+     *      [...]
+     * }
+     * @response status=404 scenario="user not found" {
+     *      "message": "usuário não encontrado."
+     * }
      */
     public function update(Request $request)
     {
@@ -77,17 +106,17 @@ class UserController extends Controller
             User::getValidationRules($user->id),
             User::getValidationMessages()
         );
-        
+
         // Atualiza usuário
         User::where('id', $request->input('id'))->update($request->except('id'));
 
         return $user;
     }
-    
+
 
     /**
      * Delete
-     * 
+     *
      * @return Json
      */
     public function delete(Request $request, $id)
